<package>
  <name>velma_core_ve_re_lwr_msgs</name>
  <version>0.1.0</version>
  <license>BSD</license>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <description>

    velma_core_ve_re_lwr_msgs

  </description>
  <author>Dawid Seredynski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>lwr_msgs</build_depend>
  <run_depend>lwr_msgs</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
